tests/NormalTests/paczka1/small_fuzzy/23497798.err
Error in line 1: PSn S924 48,5
Error in line 7: A655 S670 13,5
Error in line 12: PSn A655 11,4
